// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field should change clear icon when using clear-icon prop 1`] = `
<i
  class="rc-badge__wrapper rc-field__clear van-icon van-icon-cross"
  style="font-size: 16px;"
/>
`;

exports[`Field should render colon when using colon prop 1`] = `
<div
  class="rc-cell__title rc-field__label"
>
  world
  :
</div>
`;

exports[`Field should render correctly when readonly 1`] = `
<div>
  <div
    class="rc-cell rc-field"
  >
    <div
      class="rc-cell__title rc-field__label"
    >
      label
    </div>
    <div
      class="rc-cell__value rc-field__value"
    >
      <div
        class="rc-field__body"
      >
        <input
          class="rc-field__control"
          placeholder=""
          readonly=""
          type="text"
          value="abc"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Field should render error-message slot correctly 1`] = `
<div
  class="rc-field__error-message"
>
  this is an error message
</div>
`;

exports[`Field should render extra slot correctly 1`] = `
<div>
  <div
    class="rc-cell rc-field"
  >
    <div
      class="rc-cell__value rc-cell__value--alone rc-field__value"
    >
      <div
        class="rc-field__body"
      >
        <input
          class="rc-field__control"
          placeholder=""
          type="text"
          value="test"
        />
      </div>
    </div>
    <i
      class="rc-badge__wrapper van-icon van-icon-success"
    />
  </div>
</div>
`;

exports[`Field should render label slot correctly 1`] = `
<div
  class="rc-cell__title rc-field__label"
>
  Lable
</div>
`;

exports[`Field should render textarea when type is textarea 1`] = `
<div>
  <div
    class="rc-cell rc-field"
  >
    <div
      class="rc-cell__value rc-cell__value--alone rc-field__value"
    >
      <div
        class="rc-field__body"
      >
        <textarea
          class="rc-field__control"
          placeholder=""
          style="height: auto;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Field should render word limit correctly 1`] = `
<div>
  <div
    class="rc-cell rc-field rc-field--min-height"
  >
    <div
      class="rc-cell__value rc-cell__value--alone rc-field__value"
    >
      <div
        class="rc-field__body"
      >
        <textarea
          class="rc-field__control rc-field__control--min-height"
          placeholder=""
        />
      </div>
      <div
        class="rc-field__word-limit"
      >
        <span
          class="rc-field__word-num"
        >
          0
        </span>
        /
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Field should render word limit correctly when value is undefined 1`] = `
<div>
  <div
    class="rc-cell rc-field"
  >
    <div
      class="rc-cell__value rc-cell__value--alone rc-field__value"
    >
      <div
        class="rc-field__body"
      >
        <input
          class="rc-field__control"
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        class="rc-field__word-limit"
      >
        <span
          class="rc-field__word-num"
        >
          0
        </span>
        /
        3
      </div>
    </div>
  </div>
</div>
`;
